mainifest/depoloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-chat-app
  template:
    metadata:
      labels:
        app: go-chat-app
    spec:
      containers:
      - name: go-chat-app
        image: go-chat-app:latest
        ports:
        - containerPort: 8082
